--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "pm2 serve dist 3000 --name 'tatniencongty' --spa"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
